# hyperspy_tutorial

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Outline_v2.docx  README.md  TomoTools_Demo.ipynb  coming_soon.html  conf.py  environment.yml  fpd_data_processing.ipynb  genindex.html  index.html  index.rst  install_anaconda.html  install_bundle.html  install_bundle_linux.html  install_bundle_mac.html  install_bundle_windows.html  make_release.sh  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  testing_install.html
.doctrees/: coming_soon.doctree  environment.pickle  index.doctree  install_anaconda.doctree  install_bundle.doctree  install_bundle_linux.doctree  install_bundle_mac.doctree  install_bundle_windows.doctree  testing_install.doctree
01 HyperSpy basics/: 01 Getting_Started.ipynb  01 Getting_Started_completed.ipynb  astronaut.hspy
01 Welcome and Python HyperSpy intro/: 01_python_hs_intro.ipynb
02 Curve fitting/: 02 Fitting_tutorial.ipynb  02 Fitting_tutorial_completed.ipynb
02 EELS/: 02 EELS_analysis.ipynb  02 EELS_analysis_complete.ipynb
02 HyperSpy basics/: 02 Getting_Started_completed.ipynb  Getting_Started.ipynb  Getting_Started_completed.ipynb  astronaut.hspy  jupyter_matplotlib.ipynb
03 Curve fitting/: 03 Fitting_tutorial_completed.ipynb
03 EELS/: EELS_analysis.ipynb  EELS_analysis_complete.ipynb
03 Machine learning/: 03_machine_learning_in_EM.ipynb  03_machine_learning_talk.ipynb
04 Curve fitting/: 02 Fitting_tutorial_completed.ipynb  04 Fitting_tutorial.ipynb  (+1 more)
04 EELS/: 04 EELS_analysis.ipynb  (+1 more)
(+142 files in other folders)
